
JasperReports Change Log
===================================

JasperReports 1.2.1 (2006-0x-xx)
-----------------------------------
- support for URL stream handlers;

- isPdfSimulatedBold and isPdfSimulatedItalic;

- freezed serialVersionUID;

- minor bug fixes and improvements;





JasperReports 1.2.0 (2006-02-06)
-----------------------------------
- support for other query languages including HQL and XPath implementations;

- new evaluation time "Auto" available for text fields enabling 
new types of calculations such as percentage;

- CSV datasource;

- conditional styles;

- crosstab total variables to allow combining data at different 
aggregation levels (percentages, etc);

- serialization of virtualized reports;

- the built-in HTML exporter now produces XHTML-compatible output;

- minor bug fixes and improvements;





JasperReports 1.1.1 (2005-11-28)
-----------------------------------
- support for crosstab cell vertical stretch;

- access to report data from chart customizer implementations by
extending new JRAbstractChartCustomizer class;

- support for Java 1.5 in the JDT-based report compiler;

- new "isIgnorePagination" attribute available at report template level;

- minor bug fixes and improvements;





JasperReports 1.1.0 (2005-10-21)
-----------------------------------
- support for report styles that can be referenced by elements to inherit 
visual properties such as font, color, border, etc; report fonts are now deprecated;

- new frame element added to support grouping other report element together;

- new dataset concept that comprises parameter, field, variable and group 
declarations and represents a mixture between a data source and a subreport 
to help iterating through data for chart and crosstab generation;

- support for crosstabs added using a specialized component;

- new XLS exporter implementation that uses the Java Excel Api open source library is